fix minor layout issues

--- a/scss/layout/history.scss
+++ b/scss/layout/history.scss
@@ -51,6 +51,11 @@
                     color: #473623;
                 }
 
+                @include mixins.liftUp($levels: 2, $modifiers: ("-regions--bottom-left")) {
+                    color: #3b1a0e;
+                    transform: translateY(0px);
+                }
+
                 @include mixins.liftUp($levels: 2, $modifiers: ("-region--top")) {
                     &:first-of-type,
                     &:nth-of-type(2) {
@@ -109,7 +114,8 @@
                 width: calc(100% - mixins.obtainViewportWidth($topRegionWidth + $topRegionPaddingLeft + $paddingLeft));
                 padding-top: mixins.obtainViewportWidth($topRegionPaddingTop);
                 padding-left: mixins.obtainViewportWidth($paddingLeft);
-                background: linear-gradient(to bottom right, #edddbf, #e4d4b8);
+                background: linear-gradient(to bottom, #edddbf, #e4d4b8);
+                color: #827263;
 
                 &::before {
                     position: absolute;
@@ -130,13 +136,27 @@
 
             &--bottom-left {
                 display: inline-flex;
+                vertical-align: top;
                 gap: mixins.obtainViewportWidth(5px);
                 width: mixins.obtainViewportWidth(335px);
                 height: calc(100% - mixins.obtainViewportWidth($topRegionHeight + $topRegionPaddingTop) + 1px);
                 padding-left: mixins.obtainViewportWidth(20.5px);
+                float: left;
                 background:  linear-gradient(to top, #c8a26a, #b68b4f);
                 margin-top: -1px;
                 color: #3b1a0e;
+            }
+
+            &--bottom {
+                display: inline-flex;
+                flex-direction: row-reverse;
+                gap: mixins.obtainViewportWidth(6.5px);
+                width: calc(100% - mixins.obtainViewportWidth($bottomWidth + $bottomPaddingLeft));
+                height: calc(100% - mixins.obtainViewportWidth($topRegionHeight + $topRegionPaddingTop) + 1px);
+                background: radial-gradient(at top, rgba(#ebd9bb, 0.5), transparent 70%),
+                    radial-gradient(circle at 15% 100%, rgba(#a6773e, 0.25), transparent 35%),
+                    linear-gradient(to bottom, #e4d4b8, #dcbd8a);
+                color: #7e6a57;
             }
         }
 
@@ -145,6 +165,7 @@
             text-align: justify;
 
             &::before {
+                display: block;
                 float: left;
             }
 
@@ -161,8 +182,8 @@
                 @include mixins.liftUp($levels: 1, $modifiers: ("--top")) {
                     margin-top: mixins.obtainViewportWidth(-30px);
                     width: 100%;
-                    height: 100%;
-                    shape-outside: polygon(0 83%, 15% 68%, 33% 56%, 53% 42%, 76% 26%, 96% 18%, 99% 11%, 100% 0%, 100% 99%);
+                    height: 120%;
+                    shape-outside: polygon(0 59%, 14% 53%, 35% 45%, 49% 38%, 67% 26%, 80% 14%, 91% 4%, 100% 0, 100% 100%, 0% 100%);
                 }
 
                 @include mixins.liftUp($levels: 1, $modifiers: ("-wrap--top-absolute")) {
@@ -183,6 +204,12 @@
                     height: 100%;
                     shape-outside: polygon(23% 0%, 33% 10%, 51% 19%, 67% 28%, 84% 38%, 94% 46%, 95% 53%, 90% 59%, 74% 63%, 98% 69%, 95% 80%, 86% 91%, 80% 100%, 100% 100%, 100% 0%);
                 }
+
+                @include mixins.liftUp($levels: 1, $modifiers: ("--bottom-rightmost")) {
+                    width: 30%;
+                    height: 100%;
+                    shape-outside: polygon(55% 0%, 43% 6%, 47% 15%, 47% 43%, 54% 61%, 55% 79%, 59% 92%, 57% 100%, 100% 100%, 100% 0%);
+                }
             }
 
             &--topmost {
@@ -190,7 +217,6 @@
                 height: mixins.obtainViewportWidth($topRegionHeight);
 
                 &::before {
-                    display: block;
                     width: 10%;
                     height: 100%;
                     shape-outside: polygon(77% 0, 34% 35%, 15% 52%, 6% 65%, 6% 73%, 8% 82%, 41% 91%, 100% 100%, 0% 100%, 0% 0%);
@@ -203,7 +229,6 @@
                 height: mixins.obtainViewportWidth(225px);
 
                 &::before {
-                    display: block;
                     content: "";
                     width: 5%;
                     height: 30%;
@@ -255,7 +280,6 @@
                 text-align: left;
 
                 &::before {
-                    display: block;
                     content: "";
                     width: 65%;
                     height: calc(100% + mixins.obtainViewportWidth(64px));
@@ -268,7 +292,6 @@
                 height: mixins.obtainViewportWidth($topSeparatorHeight);
 
                 &::before {
-                    display: block;
                     width: 100%;
                     height: 100%;
                     shape-margin: mixins.obtainViewportWidth(8px);
@@ -282,7 +305,6 @@
                 height: mixins.obtainViewportWidth($topRegionHeight);
 
                 &::before {
-                    display: block;
                     width: 50%;
                     height: 100%;
                     shape-outside: polygon(0% 25%, 26% 30%, 57% 39%, 75% 49%, 90% 59%, 97% 67%, 99% 75%, 90% 86%, 82% 95%, 73% 100%, 0% 100%);
@@ -296,7 +318,6 @@
                 transform: translateY(-28%);
 
                 &::before {
-                    display: block;
                     width: 50%;
                     height: 100%;
                     shape-margin: mixins.obtainViewportWidth(16px);
@@ -310,13 +331,38 @@
                 word-break: break-all;
 
                 &::before {
-                    display: block;
                     width: 100%;
                     height: 100%;
                     shape-outside: polygon(6% 0%, 8% 15%, 19% 33%, 32% 48%, 44% 65%, 56% 77%, 68% 89%, 80% 100%, 100% 100%, 100% 0%);
                     float: right;
                     content: "";
                 }
+            }
+
+            &--bottom-rightmost {
+                flex: 1.75 1 0;
+
+                &::before {
+                    width: 50%;
+                    height: 100%;
+                    shape-outside: polygon(87% 0%, 72% 10%, 58% 22%, 41% 30%, 28% 36%, 7% 43%, 0% 46%, 0% 0%);
+                    content: "";
+                }
+            }
+
+            &--bottom-central {
+                flex: 1 1 0;
+
+                &::before {
+                    width: 100%;
+                    height: 100%;
+                    shape-outside: polygon(100% 43%, 81% 50%, 49% 54%, 19% 59%, 0% 61%, 0% 1%, 100% 0%);
+                    content: "";
+                }
+            }
+
+            &--bottom {
+                flex: 1.25 1 0;
             }
         }
     }
